Reclamation WS finished
