# reclamation/app/Http/Swagger/schemas/main/detailReclamationResponse.php
@@ -2,7 +2,7 @@
 
 /**
  * @OA\Schema(
- *   schema="listClientResponse",
+ *   schema="detailReclamationResponse",
  *   required={"base_url", "status", "message", "data"},
  *   type="object",
  *   @OA\Property(
@@ -24,8 +24,8 @@
  *     ),
  *     @OA\Property(
  *          property="data",
- *          type="array",
- *          @OA\Items(ref="#/components/schemas/ClientModel")
+ *          type="object",
+ *          ref="#/components/schemas/ReclamationModel"
  *     )
  * )
  */
