# reclamation/app/Http/Swagger/schemas/models/ClientModel.php
@@ -1,33 +1,0 @@
-<?php
-
-/**
- *
- * @OA\Schema(
- *     schema="ClientModel",
- *     @OA\Property(
- *         property="first_name",
- *         type="string",
- *     ),
- *     @OA\Property(
- *         property="last_name",
- *         type="string",
- *     ),
- *     @OA\Property(
- *         property="email",
- *         type="string",
- *         format="email",
- *     ),
- *     @OA\Property(
- *         property="login",
- *         type="string",
- *     ),
- *     @OA\Property(
- *         property="password",
- *         type="string",
- *     ),
- *     @OA\Property(
- *         property="phone",
- *         type="string",
- *     ),
- * )
- */
