# reclamation/app/Http/Swagger/schemas/models/ReclamationModel.php
@@ -1,0 +1,24 @@
+<?php
+
+/**
+ *
+ * @OA\Schema(
+ *     schema="ReclamationModel",
+ *     @OA\Property(
+ *         property="email",
+ *         type="string",
+ *     ),
+ *     @OA\Property(
+ *         property="phone",
+ *         type="integer",
+ *     ),
+ *     @OA\Property(
+ *         property="subject",
+ *         type="string",
+ *     ),
+ *     @OA\Property(
+ *         property="message",
+ *         type="string",
+ *     ),
+ * )
+ */
